--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -71,11 +71,6 @@ p {
         right: -5rem;
 
         @include medBreakpoint {
-            top: 8vh;
-            right: 0;
-        }
-
-        @include smBreakpoint {
             display: none;
         }
     }
